added some comments + updated readme

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,11 @@
 {% load static %}
+
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: Base template of the application, loads on every view
+{% endcomment %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -117,8 +124,8 @@
 
     <!-- highlight.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/go.min.js"></script-->
     <script>hljs.highlightAll();</script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
