--- a/app/templates/basics.html
+++ b/app/templates/basics.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: View template of Basics of Java security article
+{% endcomment %}
+
 {% block title %}
     Basics of Java security |
 {% endblock %}
