--- a/app/templates/exercises.html
+++ b/app/templates/exercises.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: Exercises view template
+{% endcomment %}
+
 {% block title %}
     Exercise |
 {% endblock %}
@@ -11,7 +17,6 @@
         <h5>This section of the contains exercises with code snippets.</h5>
         <div class="exercise my-3">
             <h4 class="m-0 fw-bold">Insecure Deserialization Vulnerability</h4>
-            <!--p class="m-0">The code at the code snippet bellow</p-->
             <pre>
                 <code class="java">
                     import java.io.*;
@@ -42,6 +47,7 @@
             </div>
         </div>
         <br>
+        
         <div class="exercise">
             <h4 class="m-0 fw-bold">SQL Injection</h4>
             <p class="m-0"></p>
@@ -83,6 +89,7 @@
             </div>
         </div> 
         <br>
+        
         <div class="exercise">
             <h4 class="m-0 fw-bold">Cross-Site Scripting (XSS)</h4>
             <p class="m-0"></p>
@@ -105,6 +112,7 @@
             </div>
         </div> 
         <br>
+        
         <div class="exercise">
             <h4 class="m-0 fw-bold">Cross-Site Request Forgery (CSRF)</h4>
             <p class="m-0"></p>
@@ -137,6 +145,7 @@
             </div>
         </div> 
         <br>
+        
         <div class="exercise">
             <h4 class="m-0 fw-bold">Unsafe use of reflection</h4>
             <p class="m-0"></p>
