--- a/app/templates/logout.html
+++ b/app/templates/logout.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: Logout view template, shows after logging out
+{% endcomment %}
+
 {% block title %}
     Logout Page |
 {% endblock %}
 
-
 {% block content %}
 <div class="content-center">
     <div class="container">
-        
         <br>
         <h1 class="mb-3 fw-bold display-6">You have been logged out</h1>
         <div class="border-top border-dark-subtle pt-3">
