--- a/app/templates/sql-injection.html
+++ b/app/templates/sql-injection.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: View template of SQL Injection article
+{% endcomment %}
+
 {% block title %}
     SQL Injection | 
 {% endblock %}
