--- a/app/templates/tests.html
+++ b/app/templates/tests.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: Tests view template
+{% endcomment %}
+
 {% block title %}
     Test |
 {% endblock %}
@@ -65,16 +71,9 @@
             </div>
         </div>
         <br> <br>
-        <!-- TODO spravna odpoved why -->
         <p class="why">
             It is always the latest stable version, because many vulnerabilities have been already patched in the latest releases.
         </p>
     </section>
-    
-    
-    
-    
-    
-    
     
 {% endblock content %}
