--- a/app/templates/unsafe-reflection.html
+++ b/app/templates/unsafe-reflection.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: View template of Unsafe reflection article
+{% endcomment %}
+
 {% block title %}
     Unsafe reflection |
 {% endblock %}
