--- a/app/static/app/css/main.css
+++ b/app/static/app/css/main.css
@@ -1,4 +1,8 @@
-
+/*
+    author: Michaela Jalakšová
+    date: May 2024
+    description: custom css for the application
+*/
 
 body {
     background-image: linear-gradient( rgba(230, 230, 230, 0.6), rgba(230, 230, 230, 0.2), rgba(230, 230, 230, 0.6)), url("../images/bg.jpg") ;
