--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -2,6 +2,12 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: Edit account information view template
+{% endcomment %}
+
 {% block title %}
     Edit account |
 {% endblock %}
