--- a/app/templates/articles-base.html
+++ b/app/templates/articles-base.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: View template of Existing standards and guidelines article
+{% endcomment %}
+
 {% block title %}
     Existing standards and guidelines |
 {% endblock %}
