--- a/app/templates/csrf.html
+++ b/app/templates/csrf.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: View template of Cross-site request forgery article
+{% endcomment %}
+
 {% block title %}
     Cross-site request forgery | 
 {% endblock %}
