--- a/app/templates/deserialization.html
+++ b/app/templates/deserialization.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: View template of Insecure Deserialization article
+{% endcomment %}
+
 {% block title %}
     Insecure Deserialization |
 {% endblock %}
