--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,6 +2,12 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: Login view template
+{% endcomment %}
+
 {% block title %}
     Login Page | 
 {% endblock %}
