--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,6 +2,12 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
+{% comment %} 
+    author: Michaela Jalakšová
+    date: May 2024
+    description: Registration view template
+{% endcomment %}
+
 {% block title %}
     Registration |
 {% endblock %}
